[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/GridController.gd" type="Script" id=1]
[ext_resource path="res://scripts/UIController.gd" type="Script" id=2]
[ext_resource path="res://scripts/GameController.gd" type="Script" id=3]
[ext_resource path="res://textures/bingoBallsTube.png" type="Texture" id=4]
[ext_resource path="res://scripts/SoundController.gd" type="Script" id=5]
[ext_resource path="res://scripts/BallController.gd" type="Script" id=6]
[ext_resource path="res://textures/horLine.png" type="Texture" id=7]
[ext_resource path="res://textures/corners.png" type="Texture" id=8]
[ext_resource path="res://textures/verLine.png" type="Texture" id=9]
[ext_resource path="res://textures/winBingo.png" type="Texture" id=10]
[ext_resource path="res://textures/vLine.png" type="Texture" id=11]
[ext_resource path="res://textures/invertedVLine.png" type="Texture" id=12]

[node name="MainScene" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 514.0 ]
}

[node name="GridController" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="UIController" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="UIController"]
pause_mode = 2
margin_left = 904.0
margin_top = 499.0
margin_right = 1022.0
margin_bottom = 600.0

[node name="RichTextLabel" type="RichTextLabel" parent="UIController/Button"]
margin_left = 41.0
margin_top = 42.0
margin_right = 81.0
margin_bottom = 60.0
mouse_filter = 2
input_pass_on_modal_close_click = false
bbcode_enabled = true
scroll_active = false

[node name="TotalBallsLabel" type="RichTextLabel" parent="UIController"]
margin_left = 424.0
margin_top = 16.0
margin_right = 535.0
margin_bottom = 56.0
bbcode_enabled = true
bbcode_text = "[center]Total Balls:"
text = "Total Balls:"

[node name="TotalBallsValue" type="RichTextLabel" parent="UIController"]
margin_left = 520.0
margin_top = 16.0
margin_right = 563.0
margin_bottom = 29.0
scroll_active = false

[node name="WinBingoLabel" type="Sprite" parent="UIController"]
visible = false
position = Vector2( 514, 294 )
texture = ExtResource( 10 )

[node name="PrizesImages" type="Node" parent="UIController"]

[node name="CornersPrize" type="Sprite" parent="UIController/PrizesImages"]
modulate = Color( 1, 1, 1, 0.294118 )
position = Vector2( 105.642, 270.383 )
scale = Vector2( 0.379272, 0.379272 )
texture = ExtResource( 8 )

[node name="VLinePrize" type="Sprite" parent="UIController/PrizesImages"]
modulate = Color( 1, 1, 1, 0.294118 )
position = Vector2( 193.642, 270.383 )
scale = Vector2( 0.379272, 0.379272 )
texture = ExtResource( 11 )

[node name="InvertedVLinePrize" type="Sprite" parent="UIController/PrizesImages"]
modulate = Color( 1, 1, 1, 0.294118 )
position = Vector2( 193.642, 382.383 )
scale = Vector2( 0.379272, 0.379272 )
texture = ExtResource( 12 )

[node name="HorLinePrize" type="Sprite" parent="UIController/PrizesImages"]
modulate = Color( 1, 1, 1, 0.294118 )
position = Vector2( 105.642, 382.383 )
scale = Vector2( 0.379272, 0.379272 )
texture = ExtResource( 7 )

[node name="VerLinePrize" type="Sprite" parent="UIController/PrizesImages"]
modulate = Color( 1, 1, 1, 0.294118 )
position = Vector2( 105.642, 494.383 )
scale = Vector2( 0.379272, 0.379272 )
texture = ExtResource( 9 )

[node name="BingoBallsTube" type="Sprite" parent="UIController"]
position = Vector2( 514, 121 )
scale = Vector2( 0.826733, 0.826733 )
texture = ExtResource( 4 )
flip_h = true

[node name="BallController" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="BallController"]
process_mode = 0
autostart = true

[node name="SoundController" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="SoundController"]

[connection signal="pressed" from="UIController/Button" to="UIController" method="_on_Button_pressed"]
[connection signal="timeout" from="BallController/Timer" to="BallController" method="_on_Timer_timeout"]
